lab1/Test/L1-A-12-97.output
Error Type B at Line 11
Error Type A at Line 14
Error Type B at Line 20
Error Type A at Line 21
Error Type A at Line 29
Error Type B at Line 32
Error Type A at Line 34
