lab1/Test/L1-A-12-97.cmm
int AKRzBC [ 757600311 ] , whFAwze3aV1V9Od 

;
struct A3YYh1b1 {
  struct C MN58nS74czMp , _TNpYMH5O0FC = hdOYZm1ixfGb2p 
    || KZm4NbwhWHUo1l_c && VHAUWr <= RTYAc6C0X - bXOZpOmPCRfXUu9zU 
    * ! - ! jn08 ( eZXuIeN , aDj5ZxXUGFzy = zWp8Pkc != 
    OU + nPzVq0B0RAAc [ lrUuJiyQHUn11 == gYm0KENQHcB9L8OMsP 
    * ( C9Wz && yO_ > erqljItnpAmSLHz3whKW ( SUvZTSC5SQZQsf4rW 
    || HbzHOLiOJp < ! LbAH2 [ ! ! ttlnI ( A == ocPEoYiEa8siepuJdCy2 
    + ! ae73KWmKqykxDpCnuJB 610869293.206403685 ) ] ) 
    ) / 1773460863 ] ) . wLy9XdZ9ufb / Zx9ymqnsL9xCiUY9TLd 
    ( ) ;
}u3Sqpl ( float U8sg6aHyuGUNCmxZmTm #) {
}
int PBKSAtcATDwRoAxluXj ( ) {
  sY2IOYcj ;
  yd ;
  sV2g ;
  if AqtOTJIbXllS )   while ( oIuSSFuX ) {
    if ( E %)     XVID8sGPFo ;
else     E1QEzIxolVodXo ;

  }
else   if ( MPzDKbiSIxxNy3IV )   return _ByLAeoHVPvxBfsojWI9 
    ;


'}
struct {
  int so_C77gdF8jT 
};
int ;
int vK2KxE ( int zqX , int ^rzaU4cNLv9 ) {
}
int ;
